# technical-interview-tasks

./: .gitignore  readme.md
my-resource-operator/internal/controller/: myresource_controller.go
simple_web_app/: readme.md
simple_web_app/kubernetes_manifests/: README.md  kind-with-registry.sh
simple_web_app/kubernets_manifests/: README.md  kind-with-registry.sh  kubernetes-manifests.yaml
simple_web_app/simple_web_app_go/: Dockerfile  INTERVIEWER_GUIDE.md  QUICK_REFERENCE.md  README.md  SOLUTION_README.md  START_HERE.md  go.mod  main.go  main_solution.go  test_solution.sh
simple_web_app/simple_web_app_go/internal/handlers/: handlers.go  handlers_solution.go
simple_web_app/simple_web_app_go/internal/middleware/: auth.go
simple_web_app/simple_web_app_python/: Dockerfile  LOESUNG.md  README.md  README_LOESUNG.md  poetry.toml  pyproject.toml  test_solution.sh
simple_web_app/simple_web_app_python/simple_web_app/: main.py  main_solution.py
