[tool.poetry]
name = "simple-web-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.scripts]
simple_web_app = "simple_web_app.main:start"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.32.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0, <24.11.0"
mypy = ">=1.0.0, <2.0.0"
ruff = ">=0.7.0, <0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
